tests/machine/x/cpp/in_operator_extended.error
line 40: ../../../tests/machine/x/cpp/in_operator_extended.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/in_operator_extended.cpp:40:31: error: ‘struct __struct1’ has no member named ‘begin’
   40 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                               ^~~~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:40:42: error: ‘struct __struct1’ has no member named ‘end’
   40 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                                          ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:40:72: error: ‘struct __struct1’ has no member named ‘end’
   40 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
      |                                                                        ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:45:31: error: ‘struct __struct1’ has no member named ‘begin’
   45 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                               ^~~~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:45:42: error: ‘struct __struct1’ has no member named ‘end’
   45 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                                          ^~~
../../../tests/machine/x/cpp/in_operator_extended.cpp:45:72: error: ‘struct __struct1’ has no member named ‘end’
   45 |               << (std::find(m.begin(), m.end(), std::string("b")) != m.end());
      |                                                                        ^~~

 39 |     std::cout << std::boolalpha
 40 |               << (std::find(m.begin(), m.end(), std::string("a")) != m.end());
 41 |     std::cout << std::endl;
